<resources>
    <string name="app_name">EjercicioPrueba</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="height">Altura</string>
    <string name="peso">Peso</string>
    <string name="edad">Edad</string>
    <string name="result">Resultado</string>
    <string name="recalculate">Recalcular</string>
    <string name="error">Error</string>
    <string name="title_bajo_peso">Bajo peso</string>
    <string name="description_bajo_peso">Estás por debajo de lo óptimo para tu peso y altura.</string>
    <string name="title_peso_normal">Normal</string>
    <string name="description_peso_normal">Estás en lo óptimo para tu peso y altura.</string>
    <string name="title_sobrepeso">Sobrepeso</string>
    <string name="description_sobrepeso">Estás por encima de lo óptimo para tu peso y altura.</string>
    <string name="title_obesidad">Obesidad</string>
    <string name="description_obesidad">Estás MUY por encima de lo óptimo para tu peso y altura.</string>
    <string name="boardgames">JUEGOS DE MESA</string>
    <string name="categories">Categorias</string>
    <string name="games">Juegos</string>
    <string name="dialog_add_game">Añadir un Juego</string>
    <string name="dialog_cooperative_category">Cooperative</string>
    <string name="dialog_deckbuilding_category">Deckbuilding</string>
    <string name="dialog_euro_category">EuroGames</string>
    <string name="dialog_lcg_categoryG">LCG</string>
    <string name="dialog_legacy_category">Legacy</string>
    <string name="dialog_lcg_category">LCG</string>
    <string name="txtChangeColor">Aplicar Color</string>
    <string name="pruebaexamen">Prueba Examen</string>
    <string name="BoardGamesActivity">Board Games Activity</string>
    <string name="calculadora_app">Calculadora App</string>
    <string name="imc_app">IMC APP</string>
    <string name="messageapp">MessageApp</string>
    <string name="Calcutreladora">Calcutreladora</string>
    <string name="Calculadora">Calculadora</string>
    <string name="primerNumero">Escribe un número</string>
    <string name="segundoNumero">Escribe otro número</string>
    <string name="space">......</string>
    <string name="Suma">+</string>
    <string name="Resta">-</string>
    <string name="Multiplicacion">X</string>
    <string name="Multi">x</string>
    <string name="Divi">/</string>
    <string name="restoDivi">%</string>
    <string name="calcular">CALCULAR</string>
    <string name="NuevaOperacion">Nueva Operación</string>
</resources>