<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculadoraExam.CalculadoraMain">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/black"
        android:textColor="@color/white"
        android:gravity="center"
        android:fontFamily="sans-serif-black"
        android:textSize="36sp"
        android:text="@string/Calculadora"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvPideNumero"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/primerNumero"
        android:fontFamily="sans-serif-black"
        android:textSize="24sp"
        android:background="@color/purple_200"
        android:textColor="@color/red"
        android:gravity="center"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- CardView para el primer número -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cvPrimerNumero"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:cardCornerRadius="12dp"
        app:background="@color/purple_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPideNumero">

        <EditText
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:inputType="number"
            android:background="@color/purple_200"
            android:gravity="center"
            android:layout_margin="5dp" />
    </androidx.cardview.widget.CardView>

    <!-- Segundo número -->
    <TextView
        android:id="@+id/tvPideSegundoNumero"
        style="@style/TextViewEtiqueta"
        android:text="@string/segundoNumero"
        app:layout_constraintTop_toBottomOf="@id/cvPrimerNumero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>